# internal/models/coupon.go
@@ -58,3 +58,33 @@ type CouponsSearchParams struct {
 	Limit        int    `json:"limit" example:"10" minimum:"1"`
 	Offset       int    `json:"offset" example:"0" minimum:"0"`
 }
+
+type CouponCreateRequest struct {
+	// Required Information
+	Code          string       `json:"code"`
+	Title         string       `json:"title"`
+	Description   string       `json:"description"`
+	DiscountValue float64      `json:"discount_value"`
+	DiscountType  DiscountType `json:"discount_type"`
+	MerchantName  string       `json:"merchant_name"`
+	MerchantURL   string       `json:"merchant_url"`
+
+	// Optional Validity Information
+	StartDate             *time.Time `json:"start_date,omitempty"`
+	EndDate               *time.Time `json:"end_date,omitempty"`
+	TermsConditions       string     `json:"terms_conditions,omitempty"`
+	MinimumPurchaseAmount float64    `json:"minimum_purchase_amount,omitempty"`
+	MaximumDiscountAmount float64    `json:"maximum_discount_amount,omitempty"`
+
+	// Metadata
+	Categories []string `json:"categories,omitempty"`
+	Tags       []string `json:"tags,omitempty"`
+	Regions    []string `json:"regions,omitempty"`    // countries/regions where valid
+	StoreType  string   `json:"store_type,omitempty"` // "online", "in_store", "both"
+}
+
+type CouponCreateResponse struct {
+	ID                int64     `json:"id"`
+	CreatedAt         time.Time `json:"created_at"`
+	MaterializedScore float64   `json:"score"`
+}
